build aurora with plugin

--- a/builder/deb/ubuntu-xenial/Dockerfile
+++ b/builder/deb/ubuntu-xenial/Dockerfile
@@ -35,7 +35,8 @@ RUN apt-get update && apt-get -y install \
   libffi-dev \
   python-all-dev \
   software-properties-common \
-  libkrb5-dev
+  libkrb5-dev \
+  vim
 
 RUN apt-get -y install openjdk-8-jdk \
   && update-alternatives --set java /usr/lib/jvm/java-8-openjdk-amd64/jre/bin/java
